# haskell-profile

./: .gitignore  404.html  CHANGELOG.md  README.md  haskell-profile.cabal  index.md  package-lock.json  site.hs
css/: input.css  output.css
docs/: 404.html  archive.html  index.html  projects.html
docs/css/: input.css  output.css
docs/images/: moneyball.jpeg:Zone.Identifier  vulnerability.jpg:Zone.Identifier
docs/posts/: 2015-08-23-example.html  2023-12-11.html  2024-04-22.html  2024-12-05.html  2024-12-10.html  2025-03-24.html  2025-05-12.html  2025-07-28.html  2025-08-01.html
docs/projects/: 2022-10-06.html  2023-10-23.html  2023-12-11.html  2023-12-12.html  2024-03-04.html  2024-05-17.html  2024-12-05.html  2024-12-10.html  2024-12-11.html  2024-12-12.html  2025-07-23.html  2025-08-23.html  2025-09-23.html
images/: Noise Complaints Research Poster.jpg:Zone.Identifier  docs-logo.png:Zone.Identifier  gas-logo.png:Zone.Identifier  noise-complaints.jpg:Zone.Identifier  synth.jpg:Zone.Identifier
posts/: 2015-08-23-example.markdown  2023-12-11.markdown  2023-12-11.md  2024-04-22.md  2024-12-05.md  2024-12-10.md  2025-03-24.md  2025-05-12.md  2025-07-28.md  2025-08-01.md
projects/: 2022-10-06.md  2023-10-23.md  2023-12-11.md  2023-12-12.md  2024-03-04.md  2024-05-17.md  2024-12-05.md  2024-12-10.md  2024-12-11.md  2024-12-12.md  2025-07-23.md  2025-08-23.md  2025-09-23.md
site/: index.html
site/docs/: index.html
templates/: default.html  footer.html  header.html  post.html  project-list.html  projects.html  timeline.html
