cabal-version:       2.2

name:                haskell-profile
version:             0.1.0.0
homepage:            https://github.com/dhan4043/haskell-profile
license:             BSD-3-Clause
license-file:        LICENSE
author:              David Han
maintainer:          dhan4043@gmail.com
copyright:           2025 David Han
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable haskell-profile
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
